// -*- mode: text; -*-

This file is referred by some automatic release scripts.

[Release History (Japanese)]
<!-- BEGIN-LATEST-JP -->
<li>Polaris Engine 1.1.23 2024/5/1
  <ul>
    <li>Android版の修正</li>
  </ul>
</li>
<!-- END-LATEST-JP -->
<li>Polaris Engine 1.1.22 2024/4/28
  <ul>
    <li>システムメニューのカスタムメニューGUIを開いたときのバグを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.1.21 2024/4/27
  <ul>
    <li>Cielシステムでロードしたときにキャラの数が復元されないバグの修正</li>
  </ul>
</li>
<li>Polaris Engine 1.1.20 2024/4/27
  <ul>
    <li>Cielシステムでロードしたときにキャラの数が復元されないバグの修正</li>
  </ul>
</li>
<li>Polaris Engine 1.1.19 2024/4/27
  <ul>
    <li>Cielシステムでロードしたときにキャラの数が復元されないバグの修正</li>
  </ul>
</li>
<li>Polaris Engine 1.1.18 2024/4/27
  <ul>
    <li>日本語ライト・ダークの微修正</li>
    <li>アニメファイルでaccel:プロパティを強化 (normal,accel,brakeを指定可能)</li>
  </ul>
</li>
<li>Polaris Engine 1.1.17 2024/4/26
  <ul>
    <li>ヒストリーが表示されないバグを修正 (GUIからのgosub機能を追加した際のデグレード)</li>
  </ul>
</li>
<li>Polaris Engine 1.1.16 2024/4/25
  <ul>
    <li>newsコマンドを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.1.15 2024/4/25
  <ul>
    <li>newsコマンドを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.1.14 2024/4/25
  <ul>
    <li>newsコマンドを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.1.13 2024/4/25
  <ul>
    <li>タイトル画面を改変しやすいものに変更</li>
  </ul>
</li>
<li>Polaris Engine 1.1.12 2024/4/25
  <ul>
    <li>カスタムシステムメニューの機能向上 (gosub-guiとgosub-backの追加、pushstageをpushstateに変更)</li>
  </ul>
</li>
<li>Polaris Engine 1.1.11 2024/4/24
  <ul>
    <li>カスタムシステムメニューのGUIのglobalセクションにpushstageフラグを追加、gosub後にs2_pop_stage()で復元可能に</li>
  </ul>
</li>
<li>Polaris Engine 1.1.10 2024/4/24
  <ul>
    <li>自動インデントをコンフィグ化(serif.quote.indent)</li>
  </ul>
</li>
<li>Polaris Engine 1.1.9 2024/4/24
  <ul>
    <li>簡単な補完を実装</li>
  </ul>
</li>
<li>Polaris Engine 1.1.8 2024/4/24
  <ul>
    <li>シナリオを保存した際にusingブロックが展開されてしまうバグを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.1.7 2024/4/24
  <ul>
    <li>@set $1 = $TIME で時刻(秒)を取得できるように機能追加</li>
  </ul>
</li>
<li>Polaris Engine 1.1.6 2024/4/24
  <ul>