@@ -99,7 +99,7 @@ debug:
 	@cp ../../src/cmd_wms.c app/src/main/cpp/
 	@
 	@mkdir -p app/src/main/cpp/libpng
-	@tar xzf ../libsrc/libpng-1.6.35.tar.gz -C app/src/main/cpp/libpng --strip-components 1
+	@tar xzf ../libsrc/libpng-1.6.43.tar.gz -C app/src/main/cpp/libpng --strip-components 1
 	@cp app/src/main/cpp/libpng/scripts/pnglibconf.h.prebuilt app/src/main/cpp/libpng/pnglibconf.h
 	@
 	@mkdir -p app/src/main/cpp/jpeg
