@@ -4,12 +4,17 @@ This file is referred by some automatic release scripts.
 
 [Release History (Japanese)]
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 1.1.24 2024/5/1
+  <ul>
+    <li>libpngのバージョンアップ(Windows番のAndroid Studioでのビルドに対応)</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.1.23 2024/5/1
   <ul>
     <li>Android版の修正</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.1.22 2024/4/28
   <ul>
     <li>システムメニューのカスタムメニューGUIを開いたときのバグを修正</li>
@@ -223,12 +228,17 @@ This file is referred by some automatic release scripts.
 
 [Release History (English)]
 <!-- BEGIN-LATEST-EN -->
+<li>Polaris Engine 1.1.24 2024/5/1
+  <ul>
+    <li>Updated libpng from 1.6.35 to 1.6.43 (for cmake on Android NDK)</li>
+  </ul>
+</li>
+<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.1.23 2024/5/1
   <ul>
     <li>Fixed the Android export</li>
   </ul>
 </li>
-<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.1.22 2024/4/28
   <ul>
     <li>Fixed a bug where calling a custom GUI from SysMenu causes a flicker</li>
